@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-23T08:17:58Z",
-  "count_outdated" : 695,
-  "uniques_outdated" : 394,
-  "count" : 742,
-  "uniques" : 425,
+  "timestamp" : "2023-07-24T01:25:03Z",
+  "count_outdated" : 700,
+  "uniques_outdated" : 397,
+  "count" : 744,
+  "uniques" : 426,
   "clones" : [
-    {
-      "timestamp": "2023-07-09T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 5 ],
-      "count_decinc": [ 2, 5 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 1, 3 ]
-    },
     {
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 11,
@@ -133,6 +124,15 @@
     },
     {
       "timestamp": "2023-07-23T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
