@@ -1,12 +1,7 @@
 {
-  "count": 45,
+  "count": 44,
   "uniques": 9,
   "clones": [
-    {
-      "timestamp": "2023-07-09T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 11,
@@ -74,6 +69,11 @@
     },
     {
       "timestamp": "2023-07-23T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-24T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
